# cherminal

./: .gitignore  README.md  app.py  pyproject.toml  termchat.py
.github/workflows/: build.yml  python-publish-test.yml  python-publish.yml
templates/: index.html
