[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termchat"
version = "0.1.0"
description = "A web-based interface for interacting with a shell process."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "flask",
    "flask-httpauth",
    "passlib"
]
